// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Corporis quasi qui voluptatem nihil sit nisi fugit. Et omnis ea eos voluptatem sint. Nostrum asperiores numquam fugiat a cumque repellat. Unde eaque placeat quasi id voluptatum ullam ut vero itaque. Corrupti autem ut voluptatum saepe. Ducimus explicabo debitis odit aliquam.
 
Qui voluptas quod unde voluptatem. Dolores tempore vero qui. Explicabo quae accusamus aspernatur ut tempora iure ea sunt qui. Repellendus architecto quis officiis veritatis hic est.
 
Veniam corrupti non impedit laboriosam. Iste magnam aut facere enim molestiae libero. Voluptas delectus est aperiam voluptas deleniti necessitatibus vitae facere nihil. Voluptatem totam iste non nam ipsa hic quia suscipit. Molestias eligendi officiis. Magnam et est assumenda dolorem sed aliquid eaque.
 
Ipsa adipisci harum suscipit. Illo illum id qui excepturi quo et neque et. Pariatur accusamus blanditiis aut perferendis molestiae officiis. Expedita pariatur qui magnam hic. Ab dignissimos ut. Veritatis et quam blanditiis et nostrum vitae.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget editable header 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c6:first-child {
  margin-top: 0;
}

.c6:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.53125em;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c5:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c5 .c8 {
  font-size: 1.5em;
}

.c2 {
  height: 40px;
}

.c7 .c4 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Edit me
        <button
          className="c4 c5"
          data-test="widget-header-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c6"
    >
      Et quia dicta quisquam illo. Cupiditate consequuntur itaque officia ut aperiam. Velit pariatur temporibus expedita. Facilis corporis at.
 
Repellat odio culpa illo exercitationem unde non sed molestias at. Quisquam officia non voluptatem atque nemo. Quis necessitatibus et sunt qui delectus optio dolores quasi molestiae.
 
Facere blanditiis aut magni facere nemo beatae rem deleniti. Dignissimos rerum tempore exercitationem ducimus ut nihil magni. Sint optio est dolorum quia voluptatem asperiores omnis. Dolor porro et est. Quibusdam quia laborum reprehenderit. Voluptatem sed illum est laborum quia omnis voluptatum.
 
Aspernatur nihil fugit. Quis voluptas adipisci recusandae qui nemo animi cum est est. Sed dicta dolorem ut ullam praesentium. Velit laboriosam accusantium atque qui accusamus est.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget initialEdit = true 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c8:first-child {
  margin-top: 0;
}

.c8:last-child {
  margin-bottom: 0;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.53125em;
}

.c7:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c7:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:active,
.c7.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c7[disabled] {
  pointer-events: none;
}

.c7[disabled]:after {
  display: block;
}

.c7:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c7:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c7 .c10 {
  font-size: 1.5em;
}

.c2 {
  height: 40px;
}

.c4 {
  max-width: 90%;
}

.c9 .c6 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            data-test="widget-header-input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value="Edit me"
          />
        </div>
        <button
          className="c6 c7"
          data-test="widget-header-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c8"
    >
      Unde nulla sit molestiae cumque. Repellendus expedita odio culpa dolorem velit reprehenderit non non. Ab corporis quos accusamus officiis voluptates at sit quibusdam nobis. Eveniet qui architecto corrupti debitis pariatur consectetur. Pariatur molestiae libero consequuntur nisi voluptatum voluptatem beatae quidem. Pariatur illo qui quo et consequatur a et officia consequatur.
 
Molestiae voluptatem suscipit vero doloribus quibusdam vel laborum asperiores nulla. Consequatur ipsum fugit architecto velit quis rerum. A harum voluptatum.
 
Doloribus quo non rerum voluptatem. Qui odit praesentium explicabo. Iusto dolor aut corrupti sunt quam voluptas. Aut voluptates quidem voluptatem cum.
 
Amet ea nobis delectus ex sed aut. Quia ad amet eum necessitatibus et qui. Enim qui alias. Tempora suscipit ratione. Sed nihil eveniet magni officiis dolor. Voluptatem rem quia dolorem voluptatibus dolores et commodi.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.25em 0 0 1.25em;
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Voluptate consequuntur delectus est non voluptas. Ipsa consequatur corrupti ex. Ea tenetur a rerum. Laborum earum aut nihil nisi doloremque eveniet voluptate iusto non. Dolorem earum distinctio nobis.
 
Quas accusamus cum. Est id dolores minus perferendis aliquam rem animi. Vel eligendi illo perspiciatis magni. Voluptas in et cumque provident quo dolore non exercitationem.
 
Enim quam placeat et occaecati eveniet beatae sed ullam. Fuga aut est corrupti quasi animi qui non inventore. Excepturi at sit veniam maxime rerum esse. Ipsam fugit facilis tempora est mollitia est. Saepe magni vel neque. Nulla nulla animi et sapiente eius.
 
Mollitia velit animi deserunt et unde inventore ullam. Autem hic sint sed voluptatem consectetur facilis facere distinctio. Iusto voluptas iusto. Dolor officia est at repudiandae id ab qui minus debitis.
    </p>
  </div>
</div>
`;
